# TrucoCpp

./: .gitignore  CMakeLists.txt
Documents/: JogoTruco_ProjetoFinal.docx  JogoTruco_ProjetoFinal_doc_req.docx
TrucoCpp/: TrucoCpp.sln
TrucoCpp/TrucoCpp/: ClassView.cpp  FileView.cpp  MainFrm.cpp  MainFrm.h  PropertiesWnd.cpp  Resource.h  TrucoCpp.cpp  TrucoCpp.h  TrucoCpp.rc  TrucoCpp.vcxproj  TrucoCpp.vcxproj.filters  TrucoCppDoc.cpp  TrucoCppDoc.h  TrucoCppView.cpp  TrucoCppView.h
TrucoCpp/TrucoCpp/res/: TrucoCpp.rc2
TrucoCpp/TrucoCpp/x64/Debug/: TrucoCpp.exe.recipe  TrucoCpp.res  vc143.idb
TrucoCpp/TrucoCpp/x64/Debug/TrucoCpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  TrucoCpp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
TrucoGameCPP/: CMakeLists.txt  TrucoGameCPP.cpp  TrucoGameCPP.h
TrucoGameCPP/Controls/: Scoreboard.cpp  Scoreboard.h
TrucoGameCPP/Model/: CardEnums.h  CardModel.cpp  CardModel.h  PlayerModel.cpp  PlayerModel.h
TrucoGameCPP/View/: View.cpp  View.h
TrucoGameCPP/ViewModel/: MainPageViewModel.cpp  MainPageViewModel.h
assets/: template_card.xcf
